// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderModal should render Create Order 1`] = `
<body>
  <div>
    <div
      id="App"
    />
  </div>
  <div
    aria-describedby="modal-1-desc"
    aria-labelledby="modal-1-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-1-title"
            >
              Create order
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-a432 material-icons icon ui-iconbutton-wrapper-7e5b ui-iconbutton-medium-7e5b ui-button-ghost-a432 ui-button-secondary-a432"
            type="button"
          >
            <span
              class="ui-button-content-a432"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-medium-74a9 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          class="scrollable"
        >
          <div
            class="formBody"
          >
            <div
              class="alerts"
            >
              <div>
                <div
                  class="mb-3 row"
                >
                  <div
                    aria-checked="true"
                    aria-label="Draft order"
                    class="wrapper selected previewRadioButtonsWrapper"
                    role="radio"
                    tabindex="0"
                  >
                    <div>
                      <label
                        class="ui-label-label-3864 label"
                        for="personal"
                      >
                        <input
                          checked=""
                          class="input"
                          id="personal"
                          tabindex="-1"
                          type="radio"
                        />
                        Draft order
                      </label>
                      <div
                        class="caption caption"
                      >
                        Generate one-time cart URL valid for up to 30 days.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mb-3 row"
                >
                  <div
                    aria-checked="false"
                    aria-label="Paid order"
                    class="wrapper previewRadioButtonsWrapper"
                    role="radio"
                    tabindex="0"
                  >
                    <div>
                      <label
                        class="ui-label-label-3864 label"
                        for="company"
                      >
                        <input
                          class="input"
                          id="company"
                          tabindex="-1"
                          type="radio"
                        />
                        Paid order
                      </label>
                      <div
                        class="caption caption"
                      >
                        Create paid order with Awaiting Fulfillment status.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="currencyDropdown"
            >
              <p
                class="heading-section-semibold"
              >
                Billing
              </p>
              <label
                class="ui-label-label-3864 label"
              >
                Currency
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-3864"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
                role="combobox"
                tabindex="0"
              >
                <div
                  class="inputWrapper"
                >
                  <div
                    class="input isGreyed"
                  >
                    Select currency
                  </div>
                  <i
                    class="affix suffix toggle material-icons"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div>
              <p
                class="heading-section-semibold"
              >
                Products
              </p>
            </div>
            <div
              class="relative"
              id="product-search-input-tooltip"
            >
              <div
                class="flex"
              >
                <div
                  class="searchInput disabled dropdown"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="input-icon input-icon-right"
                    data-toggle="dropdown"
                  >
                    <div
                      class="wrapper"
                    >
                      <input
                        class="input"
                        id="input-text-2"
                        name="input-text-2"
                        placeholder="Search products..."
                        type="text"
                        value=""
                      />
                      <span
                        class="suffix"
                      >
                        <i
                          class="material-icons icon"
                        >
                          search
                        </i>
                      </span>
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="dropdown dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <h6
                      class="header dropdown-header"
                      tabindex="-1"
                    >
                      0 product
                    </h6>
                    <button
                      class="dropdownItem addCustomResultDropdownItem dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      + Add custom product
                    </button>
                  </div>
                </div>
                <button
                  aria-disabled="true"
                  class="wrapper ml-2 wrapper fill secondary medium isDisabled"
                  id="bigcommerce-add-custom-product-btn"
                  type="button"
                >
                  <span
                    class="content"
                  >
                    <i
                      class="material-icons icon"
                    >
                      add
                    </i>
                  </span>
                </button>
                
              </div>
              <p
                class="searchbarInfo"
              >
                This order is currently empty. Add products using the search above.
              </p>
            </div>
            <div>
              <p
                class="modalSection"
              >
                Address
              </p>
              <label
                class="ui-label-label-3864 label"
              >
                Billing address
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-3864"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="flex"
              >
                <div
                  class="dropdown"
                  id="billing-address-dropdown"
                >
                  <div
                    aria-invalid="false"
                    class="wrapper disabled"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="inputWrapper"
                    >
                      <div
                        class="input isGreyed"
                      >
                        Select from address book...
                      </div>
                      <i
                        class="affix suffix toggle material-icons"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <button
                  aria-disabled="true"
                  class="wrapper ml-2 wrapper fill secondary medium isDisabled"
                  type="button"
                >
                  <span
                    class="content"
                  >
                    <i
                      class="material-icons icon"
                    >
                      add
                    </i>
                  </span>
                </button>
                <div />
              </div>
              <div
                class="mt-3 mb-3"
              >
                <label
                  class="ui-label-label-3864 label"
                  for="checkbox-4"
                >
                  <input
                    checked=""
                    class="input"
                    id="checkbox-4"
                    name="checkbox-4"
                    type="checkbox"
                  />
                  Shipping address is same as billing address
                </label>
              </div>
            </div>
            <p
              class="modalSection"
            >
              Comments & Notes
            </p>
            <div>
              <label
                class="ui-label-label-3864 label"
                for="comment"
              >
                Comment
              </label>
              <textarea
                aria-describedby="comment-desc"
                class="form-control"
                id="comment"
                placeholder="Add comment..."
                rows="1"
              />
              <p
                class="caption"
                id="comment-desc"
              >
                Visible to customer
              </p>
            </div>
            <div>
              <label
                class="ui-label-label-3864 label"
                for="note"
              >
                Staff note
              </label>
              <textarea
                aria-describedby="note-desc"
                class="form-control"
                id="note"
                placeholder="Add note..."
                rows="1"
              />
              <p
                class="caption"
                id="note-desc"
              >
                Not visible to customer
              </p>
            </div>
          </div>
        </div>
        <div
          class="wrapper wrapper"
        >
          <div
            class="actions"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              tabindex="0"
              type="button"
            >
              <span
                class="content"
              >
                Cancel
              </span>
            </button>
            <button
              aria-disabled="true"
              class="wrapper fill primary medium isDisabled"
              tabindex="0"
              type="button"
            >
              <span
                class="content"
              >
                Create Draft Order
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-0"
  />
  <div
    data-floating-ui-portal=""
    id="floating-ui-2"
  />
</body>
`;

exports[`OrderModal should render Duplicate Order 1`] = `
<body>
  <div>
    <div
      id="App"
    />
  </div>
  <div
    aria-describedby="modal-5-desc"
    aria-labelledby="modal-5-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-5-title"
            >
              Duplicate order
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-a432 material-icons icon ui-iconbutton-wrapper-7e5b ui-iconbutton-medium-7e5b ui-button-ghost-a432 ui-button-secondary-a432"
            type="button"
          >
            <span
              class="ui-button-content-a432"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-medium-74a9 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          class="scrollable"
        >
          <div
            class="formBody"
          >
            <div
              class="alerts"
            >
              <div>
                <div
                  class="mb-3 row"
                >
                  <div
                    aria-checked="true"
                    aria-label="Draft order"
                    class="wrapper selected previewRadioButtonsWrapper"
                    role="radio"
                    tabindex="0"
                  >
                    <div>
                      <label
                        class="ui-label-label-3864 label"
                        for="personal"
                      >
                        <input
                          checked=""
                          class="input"
                          id="personal"
                          tabindex="-1"
                          type="radio"
                        />
                        Draft order
                      </label>
                      <div
                        class="caption caption"
                      >
                        Generate one-time cart URL valid for up to 30 days.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mb-3 row"
                >
                  <div
                    aria-checked="false"
                    aria-label="Paid order"
                    class="wrapper previewRadioButtonsWrapper"
                    role="radio"
                    tabindex="0"
                  >
                    <div>
                      <label
                        class="ui-label-label-3864 label"
                        for="company"
                      >
                        <input
                          class="input"
                          id="company"
                          tabindex="-1"
                          type="radio"
                        />
                        Paid order
                      </label>
                      <div
                        class="caption caption"
                      >
                        Create paid order with Awaiting Fulfillment status.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="currencyDropdown"
            >
              <p
                class="heading-section-semibold"
              >
                Billing
              </p>
              <label
                class="ui-label-label-3864 label"
              >
                Currency
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-3864"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
                role="combobox"
                tabindex="-1"
              >
                <div
                  class="inputWrapper isDisabled"
                >
                  <div
                    class="input isGreyed"
                  >
                    Select currency
                  </div>
                  <i
                    class="affix suffix toggle material-icons"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div>
              <p
                class="heading-section-semibold"
              >
                Products
              </p>
            </div>
            <div
              class="relative"
              id="product-search-input-tooltip"
            >
              <div
                class="flex"
              >
                <div
                  class="searchInput disabled dropdown"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="input-icon input-icon-right"
                    data-toggle="dropdown"
                  >
                    <div
                      class="wrapper"
                    >
                      <input
                        class="input"
                        id="input-text-6"
                        name="input-text-6"
                        placeholder="Search products..."
                        type="text"
                        value=""
                      />
                      <span
                        class="suffix"
                      >
                        <i
                          class="material-icons icon"
                        >
                          search
                        </i>
                      </span>
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="dropdown dropdown-menu"
                    role="menu"
                    tabindex="-1"
                  >
                    <h6
                      class="header dropdown-header"
                      tabindex="-1"
                    >
                      0 product
                    </h6>
                    <button
                      class="dropdownItem addCustomResultDropdownItem dropdown-item"
                      role="menuitem"
                      tabindex="0"
                      type="button"
                    >
                      + Add custom product
                    </button>
                  </div>
                </div>
                <button
                  aria-disabled="true"
                  class="wrapper ml-2 wrapper fill secondary medium isDisabled"
                  id="bigcommerce-add-custom-product-btn"
                  type="button"
                >
                  <span
                    class="content"
                  >
                    <i
                      class="material-icons icon"
                    >
                      add
                    </i>
                  </span>
                </button>
                
              </div>
              <p
                class="searchbarInfo"
              >
                This order is currently empty. Add products using the search above.
              </p>
            </div>
            <div>
              <p
                class="modalSection"
              >
                Address
              </p>
              <label
                class="ui-label-label-3864 label"
              >
                Billing address
                <abbr
                  aria-label="required"
                  class="ui-label-abbr-3864"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="flex"
              >
                <div
                  class="dropdown"
                  id="billing-address-dropdown"
                >
                  <div
                    aria-invalid="false"
                    class="wrapper disabled"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="inputWrapper"
                    >
                      <div
                        class="input isGreyed"
                      >
                        Select from address book...
                      </div>
                      <i
                        class="affix suffix toggle material-icons"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <button
                  aria-disabled="true"
                  class="wrapper ml-2 wrapper fill secondary medium isDisabled"
                  type="button"
                >
                  <span
                    class="content"
                  >
                    <i
                      class="material-icons icon"
                    >
                      add
                    </i>
                  </span>
                </button>
                <div />
              </div>
              <div
                class="mt-3 mb-3"
              >
                <label
                  class="ui-label-label-3864 ui-label-isdisabled-3864 label"
                  for="checkbox-8"
                >
                  <input
                    checked=""
                    class="input"
                    disabled=""
                    id="checkbox-8"
                    name="checkbox-8"
                    type="checkbox"
                  />
                  Shipping address is same as billing address
                </label>
              </div>
            </div>
            <p
              class="modalSection"
            >
              Comments & Notes
            </p>
            <div>
              <label
                class="ui-label-label-3864 label"
                for="comment"
              >
                Comment
              </label>
              <textarea
                aria-describedby="comment-desc"
                class="form-control"
                id="comment"
                placeholder="Add comment..."
                readonly=""
                rows="1"
              />
              <p
                class="caption"
                id="comment-desc"
              >
                Visible to customer
              </p>
            </div>
            <div>
              <label
                class="ui-label-label-3864 label"
                for="note"
              >
                Staff note
              </label>
              <textarea
                aria-describedby="note-desc"
                class="form-control"
                id="note"
                placeholder="Add note..."
                readonly=""
                rows="1"
              />
              <p
                class="caption"
                id="note-desc"
              >
                Not visible to customer
              </p>
            </div>
          </div>
        </div>
        <div
          class="wrapper wrapper"
        >
          <div
            class="actions"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary medium"
              tabindex="0"
              type="button"
            >
              <span
                class="content"
              >
                Cancel
              </span>
            </button>
            <button
              aria-disabled="true"
              class="wrapper fill primary medium isDisabled"
              tabindex="0"
              type="button"
            >
              <span
                class="content"
              >
                Create Draft Order
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-9"
  />
  <div
    data-floating-ui-portal=""
    id="floating-ui-11"
  />
</body>
`;
